@@ -63,10 +63,10 @@ public class UsuarioRestController {
 	try {
 	    cipher = Cipher.getInstance(algoritmo);
 	    cipher.init(Cipher.ENCRYPT_MODE, key);
-	    byte[] textobytes = texto.getBytes( "utf-8" );
+	    byte[] textobytes = texto.getBytes("utf-8");
 	    byte[] cipherbytes = cipher.doFinal(textobytes);
-	    //value = new BASE64Encoder().encode(cipherbytes);
-	    value= Base64.getEncoder().encodeToString(cipherbytes);
+	    // value = new BASE64Encoder().encode(cipherbytes);
+	    value = Base64.getEncoder().encodeToString(cipherbytes);
 	} catch (NoSuchAlgorithmException ex) {
 	    System.err.println(ex.getMessage());
 	} catch (NoSuchPaddingException ex) {
@@ -86,13 +86,13 @@ public class UsuarioRestController {
      * 
      * @param texto Texto encriptado
      * @return String texto desencriptado
-     * @throws UnsupportedEncodingException 
+     * @throws UnsupportedEncodingException
      */
     public String desencriptar(String texto) throws UnsupportedEncodingException {
 	String str = "";
 	try {
-	    //byte[] value = new BASE64Decoder().decodeBuffer(texto);
-	    byte[] value= Base64.getDecoder().decode(texto.getBytes( "utf-8" ));
+	    // byte[] value = new BASE64Decoder().decodeBuffer(texto);
+	    byte[] value = Base64.getDecoder().decode(texto.getBytes("utf-8"));
 	    cipher = Cipher.getInstance(algoritmo);
 	    cipher.init(Cipher.DECRYPT_MODE, key);
 	    byte[] cipherbytes = cipher.doFinal(value);
@@ -110,6 +110,7 @@ public class UsuarioRestController {
 	}
 	return str;
     }
+
     public Usuario desencriptarUsuario(Usuario usuario) throws UnsupportedEncodingException {
 	addKey(clave);
 	usuario.setDni(desencriptar(usuario.getDni()));
@@ -121,9 +122,9 @@ public class UsuarioRestController {
     }
 
     @GetMapping("/usuarios")
-    public List<Usuario> getAllUsers() {
+    public List<Usuario> getAllUsers() throws UnsupportedEncodingException {
 		List<Usuario> listaUsuarios = usuarioService.findAll();
-		List<Usuario> listaUsuariosDesencriptados = new List<Usuario>;
+		List<Usuario> listaUsuariosDesencriptados = new ArrayList<Usuario>();
 		for(Usuario u : listaUsuarios){
 			u.setDni(desencriptar(u.getDni()));
 			// TODO crear metodo para encriptar y desencriptar usuarios
@@ -146,7 +147,7 @@ public class UsuarioRestController {
 
     @GetMapping("/usuarios/{id}")
     public Usuario getUserById(@PathVariable("id") String id) {
-		return usuarioService.findUserById(id);
+	return usuarioService.findUserById(id);
     }
 
     /**
@@ -155,38 +156,38 @@ public class UsuarioRestController {
      * @param dni
      * @param password
      * @return
-     * @throws UnsupportedEncodingException 
+     * @throws UnsupportedEncodingException
      */
-    @GetMapping("/usuarios/{dni}/{password}") 
-    public RespuestaLogin validateLogin(@PathVariable("dni") String dni, @PathVariable("password") String password) {
-    	RespuestaLogin respuestaLogin = new RespuestaLogin();
-		List<Usuario> listaUsuarios = usuarioService.findAll();
-		addKey(clave);
-		dni = encriptar(dni);
-		password = encriptar(password);
-		for (Usuario u : listaUsuarios) {
-		    if (u.getDni().equals(dni) && u.getPassword().equals(password)) {
-		    	u.setDni(desencriptar(u.getDni()));
-				u.setNombre(desencriptar(u.getNombre()));
-				u.setApellidos(desencriptar(u.getApellidos()));
-				u.setTelefono(desencriptar(u.getTelefono()));
-				u.setEmail(desencriptar(u.getEmail()));
-				u.setDireccion(desencriptar(u.getDireccion()));
-				u.setTipo(desencriptar(u.getTipo()));
-				u.setPassword(desencriptar(u.getPassword()));
-				u.setSexo(desencriptar(u.getSexo()));
-				u.setMedico(desencriptar(u.getMedico()));
-				u.setLocalidad(desencriptar(u.getLocalidad()));
-				u.setEspecialidad(desencriptar(u.getEspecialidad()));
-				u.setCentroMedico(desencriptar(u.getCentroMedico()));
-				respuestaLogin.setUsuario(u);
-		    	respuestaLogin.setLoginPasado(true); 
-		    	break;
-		    } else {
-		    	respuestaLogin.setLoginPasado(false); 
-		    }
-		}
-		return respuestaLogin;
+    @GetMapping("/usuarios/{dni}/{password}")
+    public RespuestaLogin validateLogin(@PathVariable("dni") String dni, @PathVariable("password") String password) throws UnsupportedEncodingException {
+	RespuestaLogin respuestaLogin = new RespuestaLogin();
+	List<Usuario> listaUsuarios = usuarioService.findAll();
+	addKey(clave);
+	dni = encriptar(dni);
+	password = encriptar(password);
+	for (Usuario u : listaUsuarios) {
+	    if (u.getDni().equals(dni) && u.getPassword().equals(password)) {
+		u.setDni(desencriptar(u.getDni()));
+		u.setNombre(desencriptar(u.getNombre()));
+		u.setApellidos(desencriptar(u.getApellidos()));
+		u.setTelefono(desencriptar(u.getTelefono()));
+		u.setEmail(desencriptar(u.getEmail()));
+		u.setDireccion(desencriptar(u.getDireccion()));
+		u.setTipo(desencriptar(u.getTipo()));
+		u.setPassword(desencriptar(u.getPassword()));
+		u.setSexo(desencriptar(u.getSexo()));
+		u.setMedico(desencriptar(u.getMedico()));
+		u.setLocalidad(desencriptar(u.getLocalidad()));
+		u.setEspecialidad(desencriptar(u.getEspecialidad()));
+		u.setCentroMedico(desencriptar(u.getCentroMedico()));
+		respuestaLogin.setUsuario(u);
+		respuestaLogin.setLoginPasado(true);
+		break;
+	    } else {
+		respuestaLogin.setLoginPasado(false);
+	    }
+	}
+	return respuestaLogin;
     }
 
     /**
@@ -194,38 +195,39 @@ public class UsuarioRestController {
      * 
      * @param usuario
      * @return
-     * @throws UnsupportedEncodingException 
+     * @throws UnsupportedEncodingException
      */
     // TODO Encriptar los dotos que faltan
     @PostMapping("/usuarios")
-    public Usuario registrarUsuario(@Valid @RequestBody Usuario usuario) {
-		usuario.set_id(ObjectId.get());
-		addKey(clave);
-		usuario.setDni(encriptar(usuario.getDni()));
-		usuario.setNombre(encriptar(usuario.getNombre()));
-		usuario.setApellidos(encriptar(usuario.getApellidos()));
-		usuario.setTelefono(encriptar(usuario.getTelefono()));
-		usuario.setEmail(encriptar(usuario.getEmail()));
-		usuario.setDireccion(encriptar(usuario.getDireccion()));
-		usuario.setTipo(encriptar(usuario.getTipo()));
-		usuario.setPassword(encriptar(usuario.getPassword()));
-		usuario.setSexo(encriptar(usuario.getSexo()));
-		usuario.setMedico(encriptar(usuario.getMedico()));
-		usuario.setLocalidad(encriptar(usuario.getLocalidad()));
-		usuario.setEspecialidad(encriptar(usuario.getEspecialidad()));
-		usuario.setCentroMedico(encriptar(usuario.getCentroMedico()));
-		usuarioService.saveUser(usuario);
-		return usuario;
+    public Usuario registrarUsuario(@Valid @RequestBody Usuario usuario) throws UnsupportedEncodingException {
+	usuario.set_id(ObjectId.get());
+	addKey(clave);
+	usuario.setDni(encriptar(usuario.getDni()));
+	usuario.setNombre(encriptar(usuario.getNombre()));
+	usuario.setApellidos(encriptar(usuario.getApellidos()));
+	usuario.setTelefono(encriptar(usuario.getTelefono()));
+	usuario.setEmail(encriptar(usuario.getEmail()));
+	usuario.setDireccion(encriptar(usuario.getDireccion()));
+	usuario.setTipo(encriptar(usuario.getTipo()));
+	usuario.setPassword(encriptar(usuario.getPassword()));
+	usuario.setSexo(encriptar(usuario.getSexo()));
+	usuario.setMedico(encriptar(usuario.getMedico()));
+	usuario.setLocalidad(encriptar(usuario.getLocalidad()));
+	usuario.setEspecialidad(encriptar(usuario.getEspecialidad()));
+	usuario.setCentroMedico(encriptar(usuario.getCentroMedico()));
+	usuarioService.saveUser(usuario);
+	return usuario;
     }
 
     /**
      * Modificar la contraseña del usuario
      * 
      * @param password
-     * @throws UnsupportedEncodingException 
+     * @throws UnsupportedEncodingException
      */
     @PutMapping("/usuarios/password/{id}")
-    public Usuario modificarPassword(@PathVariable("id") ObjectId id, @Valid @RequestBody Usuario usuario) throws UnsupportedEncodingException {
+    public Usuario modificarPassword(@PathVariable("id") ObjectId id, @Valid @RequestBody Usuario usuario)
+	    throws UnsupportedEncodingException {
 	usuario.set_id(id);
 	addKey(clave);
 	usuario.setPassword(encriptar(usuario.getPassword()));
@@ -239,26 +241,28 @@ public class UsuarioRestController {
      * 
      * @param teléfono
      * @param modificarDatosContacto
-     * @throws UnsupportedEncodingException 
+     * @throws UnsupportedEncodingException
      */
     @PutMapping("/usuarios/datosContacto/{id}")
-    public Usuario modificarDatosContacto(@PathVariable("id") ObjectId id, @Valid @RequestBody Usuario usuario) {
-    	usuario.set_id(id);
-		addKey(clave);
-		usuario.setTelefono(encriptar(usuario.getTelefono()));
-		usuario.setEmail(encriptar(usuario.getEmail()));
-		usuario.setDireccion(encriptar(usuario.getDireccion()));
-    	usuarioService.saveUser(usuario);
-    	return usuario;
+    public Usuario modificarDatosContacto(@PathVariable("id") ObjectId id, @Valid @RequestBody Usuario usuario) throws UnsupportedEncodingException {
+	usuario.set_id(id);
+	addKey(clave);
+	usuario.setTelefono(encriptar(usuario.getTelefono()));
+	usuario.setEmail(encriptar(usuario.getEmail()));
+	usuario.setDireccion(encriptar(usuario.getDireccion()));
+	usuarioService.saveUser(usuario);
+	return usuario;
+    }
 
-	/**
+    /**
      * Modificar los datos de personales del usuario
      * 
      * @param modificarDatosPersonales
-     * @throws UnsupportedEncodingException 
+     * @throws UnsupportedEncodingException
      */
     @PutMapping("/usuarios/datospersonales/{id}")
-    public Usuario modificarDatosPersonales(@PathVariable("id") ObjectId id, @Valid @RequestBody Usuario usuario) throws UnsupportedEncodingException {
+    public Usuario modificarDatosPersonales(@PathVariable("id") ObjectId id, @Valid @RequestBody Usuario usuario)
+	    throws UnsupportedEncodingException {
 	usuario.set_id(id);
 	addKey(clave);
 	usuario.setNombre(encriptar(usuario.getNombre()));
@@ -267,7 +271,7 @@ public class UsuarioRestController {
 	usuario.setTipo(encriptar(usuario.getTipo()));
 	usuarioService.saveUser(usuario);
 	return usuario;
-    	
+
     }
 
 }
